[tool.poetry]
name = "python-gql"
version = "0.1.2"
description = "Python schema-first GraphQL library based on GraphQL-core"
authors = ["ysun <sunyu418@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/syfun/python-gql"

packages = [
    { include = "gql" }
]

[tool.poetry.dependencies]
python = "^3.7"
graphql-core = "^3"

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
isort = "*"
flake8 = "*"
pre-commit = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
