[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gql"
authors = [
    {name = "YuSUN", email = "y.sun@teletraan.io"},
]
readme = "README.md"
dynamic = ["version", "description"]
requires-python = ">=3.7"
dependencies = [
   "graphql-core >=3.1.5",
]

[project.urls]
Documentation = "https://graphite.teletraan.io"
Source = "https://github.com/syfun/python-gql"


[project.scripts]
ge = "graphite.contrib.cli.main:app"

[project.optional-dependencies]
dev = [
    "flake8 ==3.9.2",
    "black ==21.5b1",
    "isort ==5.8.0",
    "pre-commit ==2.13.0",
    "pytest ==6.2.4",
]

[tool.black]
line-length = 100
skip-string-normalization = true

[tool.isort]  # https://black.readthedocs.io/en/stable/compatible_configs.html#isort
profile = "black"
skip_gitignore = true
indent = "    "
no_lines_before = "LOCALFOLDER"
combine_as_imports = true

[tool.pyright]
reportGeneralTypeIssues = false

[tool.pytest.ini_options]
testpaths = ["tests"]
